@@ -22,12 +22,15 @@
 // Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301, USA
 //
 
+
 #include <wx/mstream.h>
 #include <wx/gifdecod.h>
 #include <wx/dcbuffer.h>
 
+
 #include "MuleGifCtrl.h"
 #include "Types.h"
+
 
 BEGIN_EVENT_TABLE(MuleGifCtrl, wxControl)
 	EVT_TIMER(GIFTIMERID, MuleGifCtrl::OnTimer)
@@ -35,57 +38,77 @@ BEGIN_EVENT_TABLE(MuleGifCtrl, wxControl)
 	EVT_ERASE_BACKGROUND(MuleGifCtrl::OnErase)
 END_EVENT_TABLE()
 
+	
 #if wxCHECK_VERSION(2, 7, 1)
 // Wrapper that emulates old wxGIFDecoder API
 
-class MuleGIFDecoder : public wxGIFDecoder {
+class MuleGIFDecoder : public wxGIFDecoder
+{
+private:
+	uint32_t m_nframe;
+	wxInputStream* m_stream;
+	
 public:
-	MuleGIFDecoder(wxInputStream* stream, bool dummy) {
+	MuleGIFDecoder(wxInputStream* stream, bool dummy)
+	{
 		m_stream = stream;
 		dummy = dummy; // Unused.
 		m_nframe = 0;
 	}
 	
-	~MuleGIFDecoder() { /* don't delete the stream! */ }
+	~MuleGIFDecoder()
+		{ /* don't delete the stream! */ }
 	
-	wxGIFErrorCode ReadGIF() {
-		return LoadGIF(*m_stream);
-	}
+	wxGIFErrorCode ReadGIF()
+		{ return LoadGIF(*m_stream); }
 	
-	void GoFirstFrame() { m_nframe = 0; }
-	void GoNextFrame(bool dummy) { m_nframe < GetFrameCount() ? m_nframe++ : m_nframe = 0; }
-	void GoLastFrame() { m_nframe = GetFrameCount(); }
+	void GoFirstFrame()
+		{ m_nframe = 0; }
+	void GoNextFrame(bool)
+		{ m_nframe < GetFrameCount() - 1 ? m_nframe++ : m_nframe = 0; }
+	void GoLastFrame()
+		{ m_nframe = GetFrameCount() - 1; }
 	
-	void ConvertToImage(wxImage* image) { wxGIFDecoder::ConvertToImage(m_nframe, image); }
+	void ConvertToImage(wxImage* image)
+		{ wxGIFDecoder::ConvertToImage(m_nframe, image); }
 	
-	size_t GetLogicalScreenWidth() { return GetAnimationSize().GetWidth(); }
-	size_t GetLogicalScreenHeight() { return GetAnimationSize().GetHeight(); }
+	size_t GetLogicalScreenWidth()
+		{ return GetAnimationSize().GetWidth(); }
+	size_t GetLogicalScreenHeight()
+		{ return GetAnimationSize().GetHeight(); }
 	
-	size_t	GetLeft() { return 0; }
-	size_t	GetTop() { return 0; }
+	size_t GetLeft()
+		{ return 0; }
+	size_t GetTop()
+		{ return 0; }
 	
-	long GetDelay() { return wxGIFDecoder::GetDelay(m_nframe); }
-	
-private:
-	uint32_t m_nframe;
-	wxInputStream* m_stream;
+	long GetDelay()
+		{ return wxGIFDecoder::GetDelay(m_nframe); }
 };
 
 #else
-class MuleGIFDecoder : public wxGIFDecoder {
+class MuleGIFDecoder : public wxGIFDecoder
+{
 public:
-	MuleGIFDecoder(wxInputStream* stream, bool flag) : wxGIFDecoder(stream,flag) {};
+	MuleGIFDecoder(wxInputStream* stream, bool flag)
+	:
+	wxGIFDecoder(stream,flag) {};
 };
 #endif
 
 
-
-MuleGifCtrl::MuleGifCtrl( wxWindow *parent, wxWindowID id, const wxPoint& pos,
-                          const wxSize& size, long style, const wxValidator& validator,
-                          const wxString& name )
-: wxControl( parent, id, pos, size, style, validator, name ),
-  m_decoder( NULL ),
-  m_timer( this, GIFTIMERID )
+MuleGifCtrl::MuleGifCtrl(
+	wxWindow *parent,
+	wxWindowID id,
+	const wxPoint& pos,
+	const wxSize& size,
+	long style,
+	const wxValidator& validator,
+	const wxString& name)
+:
+wxControl(parent, id, pos, size, style, validator, name),
+m_decoder(NULL),
+m_timer(this, GIFTIMERID)
 {
 }
 
@@ -93,8 +116,7 @@ MuleGifCtrl::MuleGifCtrl( wxWindow *parent, wxWindowID id, const wxPoint& pos,
 MuleGifCtrl::~MuleGifCtrl()
 {
 	m_timer.Stop();
-
-	if ( m_decoder ) {
+	if (m_decoder) {
 		delete m_decoder;
 		m_decoder = NULL;
 	}
@@ -108,7 +130,7 @@ bool MuleGifCtrl::LoadData(const char* data, int size)
    		delete m_decoder;
   		m_decoder = NULL;
 	}
-
+	
   	wxMemoryInputStream stream(data, size);
   	m_decoder = new MuleGIFDecoder(&stream, TRUE);
   	if ( m_decoder->ReadGIF() != wxGIF_OK ) {
@@ -116,24 +138,24 @@ bool MuleGifCtrl::LoadData(const char* data, int size)
    		m_decoder = NULL;
    		return false;
   	}
-
+	
 	m_decoder->GoFirstFrame();
 	wxImage frame;
 	m_decoder->ConvertToImage( &frame );
 	m_frame = wxBitmap(frame);
-
+	
 	return true;
 }
 
 
 void MuleGifCtrl::Start()
 {
-	if ( m_decoder && m_decoder->IsAnimation() ) {
+	if (m_decoder && m_decoder->IsAnimation()) {
 		m_timer.Stop();
 		m_decoder->GoLastFrame();
-
+		
 		wxTimerEvent evt;
-		OnTimer( evt );
+		OnTimer(evt);
 	}
 }
 
@@ -146,39 +168,44 @@ void MuleGifCtrl::Stop()
 
 wxSize MuleGifCtrl::GetBestSize()
 {
-	return wxSize( m_decoder->GetLogicalScreenWidth(), m_decoder->GetLogicalScreenHeight() );
+	return wxSize(
+		m_decoder->GetLogicalScreenWidth(),
+		m_decoder->GetLogicalScreenHeight());
 }
 
 
-void MuleGifCtrl::OnTimer( wxTimerEvent& WXUNUSED(event) )
+void MuleGifCtrl::OnTimer(wxTimerEvent& WXUNUSED(event))
 {
-	if ( m_decoder ) {
-		if ( m_decoder->IsAnimation() )
-			m_decoder->GoNextFrame( true );
-
+	if (m_decoder) {
+		if (m_decoder->IsAnimation()) {
+			m_decoder->GoNextFrame(true);
+		}
+		
 		wxImage frame;
-		m_decoder->ConvertToImage( &frame );
+		m_decoder->ConvertToImage(&frame);
 		m_frame = wxBitmap(frame);
-
+		
 		Refresh();
-
-		if ( m_decoder->IsAnimation() )
-			m_timer.Start( m_decoder->GetDelay(), true );
+		
+		if (m_decoder->IsAnimation()) {
+			m_timer.Start(m_decoder->GetDelay(), true);
+		}
 	}
 }
 
 
-void MuleGifCtrl::OnPaint( wxPaintEvent& WXUNUSED(event) )
+void MuleGifCtrl::OnPaint(wxPaintEvent& WXUNUSED(event))
 {
 	wxBufferedPaintDC dc(this);
-
-    wxSize size = GetClientSize();
+	
+	wxSize size = GetClientSize();
 	int x = (size.GetWidth()-m_decoder->GetLogicalScreenWidth())/2;
 	int y = (size.GetHeight()-m_decoder->GetLogicalScreenHeight())/2;
-
-	dc.SetBackground( wxBrush( GetBackgroundColour(), wxSOLID ));
+	
+	dc.SetBackground(wxBrush(GetBackgroundColour(), wxSOLID));
 	dc.Clear();
-	dc.DrawBitmap( m_frame, x + m_decoder->GetLeft(), y + m_decoder->GetTop(), true);
+	dc.DrawBitmap(m_frame, x + m_decoder->GetLeft(), y + m_decoder->GetTop(), true);
 }
+
 
 // File_checked_for_headers
